--- a/styles/CertifiedTutors.module.css
+++ b/styles/CertifiedTutors.module.css
@@ -34,6 +34,8 @@
   font-size: 18px;
   line-height: 27px;
   margin-top: -20px;
+  font-family: Rubik;
+  padding-bottom: 3px;
 }
 
 .swiper__container{
