--- a/styles/HomeShowcase.module.css
+++ b/styles/HomeShowcase.module.css
@@ -54,6 +54,17 @@
 	line-height: 2rem;
 }
 
+.click__away__img__container{
+  display: inline-block;
+  padding-left: 10px;
+  position: relative;
+}
+
+.click__away__icon{
+  position: absolute;
+  top: -50px;
+}
+
 .showcase__features__container{
   margin-top: 50px;
 }
